--- a/inkstand-undertow/inkstand-undertow-resteasy/pom.xml
+++ b/inkstand-undertow/inkstand-undertow-resteasy/pom.xml
@@ -18,7 +18,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>io.inkstand</groupId>
-		<artifactId>inkstand-deployments</artifactId>
+		<artifactId>inkstand-undertow</artifactId>
 		<version>0.2.0-SNAPSHOT</version>
 	</parent>
 
