--- a/inkstand-it/inkstand-it-jmxmgmt/pom.xml
+++ b/inkstand-it/inkstand-it-jmxmgmt/pom.xml
@@ -36,6 +36,11 @@
         </dependency>
         <dependency>
             <groupId>io.inkstand</groupId>
+            <artifactId>inkstand-undertow-mgmt</artifactId>
+            <version>0.2.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.inkstand</groupId>
             <artifactId>inkstand-undertow-resteasy</artifactId>
             <version>0.2.0-SNAPSHOT</version>
         </dependency>
